# libmachina

./: CMakeLists.txt  README.md
cmake/: CPackDebianOptions.cmake
examples/: CMakeLists.txt
examples/centrifugue/: CMakeLists.txt
examples/centrifugue/include/: centrifugue_test.h  motor.h
examples/centrifugue/src/: centrifugue.c  main.c  motor.c
include/: data_types.h  fault.h  fb_allocator.h  lock_guard.h  sm_allocator.h  state_machine.h  x_allocator.h
share/: machina.pc.in
src/: fault.c  fb_allocator.c  lock_guard_pthread.c  sm_allocator.c  state_machine.c  x_allocator.c
